2011-02-01  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
	* db/source/printer/Epson-E-150.xml,
         db/source/printer/Epson-E-200.xml,
         db/source/printer/Epson-E-300.xml,
         db/source/printer/Epson-E-330S.xml,
         db/source/printer/Epson-E-500.xml,
         db/source/printer/Epson-E-520.xml,
         db/source/printer/Epson-E-600.xml,
         db/source/printer/Epson-E-700.xml,
         db/source/printer/Epson-E-720.xml,
         db/source/printer/Epson-E-800.xml,
         db/source/printer/Epson-E-810.xml,
         db/source/printer/Epson-ME_200.xml,
         db/source/printer/Epson-PictureMate_500.xml,
         db/source/printer/Epson-PictureMate_Express.xml,
         db/source/printer/Epson-PictureMate_PM_200.xml,
         db/source/printer/Epson-PictureMate_PM_210.xml,
         db/source/printer/Epson-PictureMate_PM_225.xml,
         db/source/printer/Epson-PictureMate_PM_235.xml,
         db/source/printer/Epson-PictureMate_PM_240.xml,
         db/source/printer/Epson-PictureMate_PM_250.xml,
         db/source/printer/Epson-PictureMate_PM_260.xml,
         db/source/printer/Epson-PictureMate_PM_270.xml,
         db/source/printer/Epson-PictureMate_PM_280.xml,
         db/source/printer/Epson-PictureMate_PM_290.xml,
         db/source/printer/Epson-PictureMate_PM_300.xml,
         db/source/printer/Epson-PictureMate_PM_310.xml,
         db/source/printer/Epson-PM-A750.xml,
         db/source/printer/Epson-PM-A820.xml,
         db/source/printer/Epson-PM-A840.xml,
         db/source/printer/Epson-PM-A890.xml,
         db/source/printer/Epson-PM-A920.xml,
         db/source/printer/Epson-PM-A940.xml,
         db/source/printer/Epson-PM-A950.xml,
         db/source/printer/Epson-PM-A970.xml,
         db/source/printer/Epson-PM-D600.xml,
         db/source/printer/Epson-PM-D800.xml,
         db/source/printer/Epson-PM-D870.xml,
         db/source/printer/Epson-PM-G850.xml,
         db/source/printer/Epson-PM-G4500.xml,