@@ -145,6 +145,9 @@
       <id>printer/Epson-LP-M6000</id>
     </printer>
     <printer>
+      <id>printer/Epson-LP-S210</id>
+    </printer>
+    <printer>
       <id>printer/Epson-LP-S300</id>
     </printer>
     <printer>
@@ -170,6 +173,9 @@
     </printer>
     <printer>
       <id>printer/Epson-LP-S7500</id>
+    </printer>
+    <printer>
+      <id>printer/Epson-LP-S8100</id>
     </printer>
   </printers>
 </driver>
