@@ -538,6 +538,9 @@
           <printer>printer/Epson-LP-3000C</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S210</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S300</printer>
         </constraint>
         <constraint sense="false">
@@ -693,6 +696,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-8100</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S210</printer>
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S300</printer>
@@ -882,6 +888,9 @@
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S210</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S300</printer>
         </constraint>
         <constraint sense="false">
@@ -907,6 +916,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S7500</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S8100</printer>
         </constraint>
       </constraints>
     </enum_val>
@@ -995,6 +1007,9 @@
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S210</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S300</printer>
         </constraint>
         <constraint sense="false">
@@ -1020,6 +1035,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S7500</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S8100</printer>
         </constraint>
       </constraints>
     </enum_val>
@@ -1102,6 +1120,9 @@
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S210</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S300</printer>
         </constraint>
         <constraint sense="false">
@@ -1127,6 +1148,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S7500</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S8100</printer>
         </constraint>
       </constraints>
     </enum_val>
@@ -1209,6 +1233,9 @@
           <printer>printer/Epson-LP-M6000</printer>
         </constraint>
         <constraint sense="false">
+          <printer>printer/Epson-LP-S210</printer>
+        </constraint>
+        <constraint sense="false">
           <printer>printer/Epson-LP-S300</printer>
         </constraint>
         <constraint sense="false">
@@ -1234,6 +1261,9 @@
         </constraint>
         <constraint sense="false">
           <printer>printer/Epson-LP-S7500</printer>
+        </constraint>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S8100</printer>
         </constraint>
       </constraints>
     </enum_val>
