@@ -49,6 +49,11 @@
         <en>Trans</en>
       </ev_shortname>
       <ev_driverval>-sMediaType=TRANS</ev_driverval>
+      <constraints>
+        <constraint sense="false">
+          <printer>printer/Epson-LP-S8100</printer>
+        </constraint>
+      </constraints>
     </enum_val>
   </enum_vals>
 </option>
