@@ -185,6 +185,11 @@
     </constraint>
     <constraint sense="true">
       <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S210</printer>
+      <arg_defval>ev/eplaser-jp-Model-lps210</arg_defval>
+    </constraint>
+    <constraint sense="true">
+      <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-S300</printer>
       <arg_defval>ev/eplaser-jp-Model-lps300</arg_defval>
     </constraint>
@@ -227,6 +232,11 @@
       <driver>eplaser-jp</driver>
       <printer>printer/Epson-LP-S7500</printer>
       <arg_defval>ev/eplaser-jp-Model-lps7500</arg_defval>
+    </constraint>
+    <constraint sense="true">
+      <driver>eplaser-jp</driver>
+      <printer>printer/Epson-LP-S8100</printer>
+      <arg_defval>ev/eplaser-jp-Model-lps8100</arg_defval>
     </constraint>
   </constraints>
   <enum_vals>
@@ -842,6 +852,24 @@
         </constraint>
       </constraints>
     </enum_val>
+    <enum_val id="ev/eplaser-jp-Model-lps210">
+      <ev_longname>
+        <en>Epson LP-S210</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>lps210</en>
+      </ev_shortname>
+      <ev_driverval>lp8700</ev_driverval>
+      <constraints>
+        <constraint sense="false">
+          <driver>eplaser-jp</driver>
+        </constraint>
+        <constraint sense="true">
+          <driver>eplaser-jp</driver>
+          <printer>printer/Epson-LP-S210</printer>
+        </constraint>
+      </constraints>
+    </enum_val>
     <enum_val id="ev/eplaser-jp-Model-lps300">
       <ev_longname>
         <en>Epson LP-S300</en>
@@ -1001,6 +1029,24 @@
         <constraint sense="true">
           <driver>eplaser-jp</driver>
           <printer>printer/Epson-LP-S7500</printer>
+        </constraint>
+      </constraints>
+    </enum_val>
+    <enum_val id="ev/eplaser-jp-Model-lps8100">
+      <ev_longname>
+        <en>Epson LP-S8100</en>
+      </ev_longname>
+      <ev_shortname>
+        <en>lps8100</en>
+      </ev_shortname>
+      <ev_driverval>eplcolor -dEPLModelJP -dEPLCapDuplexUnit -dEPLCapMaxResolution=1200</ev_driverval>
+      <constraints>
+        <constraint sense="false">
+          <driver>eplaser-jp</driver>
+        </constraint>
+        <constraint sense="true">
+          <driver>eplaser-jp</driver>
+          <printer>printer/Epson-LP-S8100</printer>
         </constraint>
       </constraints>
     </enum_val>
