@@ -1,0 +1,27 @@
+<printer id="printer/Epson-LP-S210">
+  <make>Epson</make>
+  <model>LP-S210</model>
+  <mechanism>
+    <laser />
+    <resolution>
+      <dpi>
+        <x>1200</x>
+        <y>1200</y>
+      </dpi>
+    </resolution>
+  </mechanism>
+  <url>http://www.epson.jp/products/offirio/printer/</url>
+  <lang>
+    <proprietary />
+  </lang>
+  <functionality>A</functionality>
+  <driver>eplaser-jp</driver>
+  <comments>
+    <en>
+    Epson provides a free (LGPL) driver for this printer. With this
+    the printer should work to its full extent.&lt;p&gt;&lt;p&gt;
+
+      Consumables/Refills: toner cartridge, drum cartridge&lt;p&gt;
+    </en>
+  </comments>
+</printer>
