@@ -1,3 +1,11 @@
+2011-02-15  Olaf Meeuwissen <olaf.meeuwissen@avasys.jp>
+	* db/source/printer/Epson-LP-S210.xml,
+	db/source/printer/Epson-LP-S8100.xml,
+	db/source/driver/eplaser-jp.xml, db/source/opt/2.xml,
+	db/source/opt/eplaser-MediaType.xml,
+	db/source/opt/eplaser-jp-Model.xml: Added two new EPSON laser
+	printers.
+
 2011-02-01  Seiko Epson Corporation <linux-epson-inkjet@avasys.jp>
 	* db/source/printer/Epson-E-150.xml,
          db/source/printer/Epson-E-200.xml,
